Add openapi.yaml v1
