# openapi.yaml
@@ -7,31 +7,82 @@ info:
 paths:
   /routes:
     post:
-      description: Compute a new route
+      summary: Compute a new route
       operationId: computeRoute
       requestBody:
+        description: Define origin and destination of the route to be computed
         required: true
         content:
           application/json:
-            schema:
-              type: object
-              properties:
-                from:
-                  "$ref": "#/components/schemas/Node"
-                to:
-                  "$ref": "#/components/schemas/Node"
-              required:
-                - from
-                - to
+              schema: 
+                $ref: "#/components/schemas/RouteRequest"
       responses:
-        '201':
-          description: Route successfully created
+        '200':
+          description: Result of the route request
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/RouteResult"          
 components:
   schemas:
-    Node:
-      type: object
+    Point:
+      description: |
+        Object representation of a point in the Geographic Coordinate System (GCS).
       properties:
         lat:
           type: number
+          description: unit degree
+          minimum: -90
+          maximum: 90
         lon:
           type: number
+          description: unit degree
+          minimum: -180
+          maximum: 180
+      required:
+        - lat
+        - lon
+    RouteRequest:
+      type: object
+      description: |
+        Request a route from a origin to a destination.
+      properties:
+        origin:
+          $ref: "#/components/schemas/Point"
+        destination:
+          $ref: "#/components/schemas/Point"
+      required:
+        - origin
+        - destination
+    RouteResult:
+      type: object
+      properties:
+        origin:
+          $ref: "#/components/schemas/Point"
+        destination:
+          $ref: "#/components/schemas/Point"
+        reachable:
+          type: boolean
+          description: States whether a route from origin to destination exists
+        Path:
+          $ref: "#/components/schemas/Path"
+      required:
+        - origin
+        - destination
+        - reachable
+    Path:
+      type: object
+      description: A path is described by sequence of points as well as its total length.
+      properties:
+        waypoints:
+          type : array
+          description: A path is an ordered list of points.
+          items:
+            $ref: "#/components/schemas/Point"
+          minItems: 1
+        length:
+          description: unit meters
+          type: integer
+      required:
+        - waypoints
+        - length
