# pkg/server/openapi_server/model_inline_object.go
@@ -1,50 +1,0 @@
-/*
- * Ship Routing API
- *
- * Access the global ship routing service via a RESTful API
- *
- * API version: 0.0.1
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi_server
-
-type InlineObject struct {
-
-	From Node `json:"from"`
-
-	To Node `json:"to"`
-}
-
-// AssertInlineObjectRequired checks if the required fields are not zero-ed
-func AssertInlineObjectRequired(obj InlineObject) error {
-	elements := map[string]interface{}{
-		"from": obj.From,
-		"to": obj.To,
-	}
-	for name, el := range elements {
-		if isZero := IsZeroValue(el); isZero {
-			return &RequiredError{Field: name}
-		}
-	}
-
-	if err := AssertNodeRequired(obj.From); err != nil {
-		return err
-	}
-	if err := AssertNodeRequired(obj.To); err != nil {
-		return err
-	}
-	return nil
-}
-
-// AssertRecurseInlineObjectRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of InlineObject (e.g. [][]InlineObject), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseInlineObjectRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aInlineObject, ok := obj.(InlineObject)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertInlineObjectRequired(aInlineObject)
-	})
-}
